--- a/UCR.Negotium.WindowsUI/Properties/Resources.resx
+++ b/UCR.Negotium.WindowsUI/Properties/Resources.resx
@@ -117,4 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="1478171906_Remove" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1478171906_Remove.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1478171741_Check" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1478171741_Check.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
